# wge

./: .gitignore  README.md  build.gradle.kts  micronaut-cli.yml  settings.gradle.kts
common/protobuf/: common.proto  scene.proto  test.proto
frontend/: README.md  package.json
frontend/sandbox/: Docker.MD  Dockerfile
frontend/src/: index.html
native/: .gitignore  CMakeLists.txt
native/client/: .gitignore  CMakeLists.txt  build.gradle.kts
native/client/include/: DXHelper.h  DXWindow.h  DXWindow.hpp  MainDXWindow.h  MainDXWindow.hpp  Win32Application.h  Win32Application.hpp  stdafx.h
native/client/include/d3dx12/: CD3DX12_BLEND_DESC.h  CD3DX12_BLEND_DESC.hpp  CD3DX12_CPU_DESCRIPTOR_HANDLE.h  CD3DX12_CPU_DESCRIPTOR_HANDLE.hpp  CD3DX12_HEAP_PROPERTIES.h  CD3DX12_HEAP_PROPERTIES.hpp  CD3DX12_RANGE.hpp  CD3DX12_RASTERIZER_DESC.h  CD3DX12_RASTERIZER_DESC.hpp  CD3DX12_RECT.h  CD3DX12_RECT.hpp  CD3DX12_RESOURCE_BARRIER.h  CD3DX12_RESOURCE_BARRIER.hpp  CD3DX12_RESOURCE_DESC.h  CD3DX12_RESOURCE_DESC.hpp  CD3DX12_ROOT_SIGNATURE_DESC.h  CD3DX12_ROOT_SIGNATURE_DESC.hpp  CD3DX12_SHADER_BYTECODE.h  CD3DX12_SHADER_BYTECODE.hpp  CD3DX12_VIEWPORT.h  CD3DX12_VIEWPORT.hpp  DXHelper.h  DXHelper.hpp  DXHelperFunctions.h  DXHelperFunctions.hpp  DXImports.h  DXImports.hpp  HResultExceptionHandler.hpp  HrException.h  HrException.hpp
native/client/src/: DXHelper.cpp  MainDXWindow.cpp  Win32Application.cpp  main.cpp
native/client/src/d3dx12/: CD3DX12_BLEND_DESC.cpp  CD3DX12_CPU_DESCRIPTOR_HANDLE.cpp  CD3DX12_HEAP_PROPERTIES.cpp  CD3DX12_RANGE.cpp  CD3DX12_RASTERIZER_DESC.cpp  CD3DX12_RECT.cpp  CD3DX12_RESOURCE_BARRIER.cpp  CD3DX12_RESOURCE_DESC.cpp  CD3DX12_ROOT_SIGNATURE_DESC.cpp  CD3DX12_SHADER_BYTECODE.cpp  CD3DX12_VIEWPORT.cpp  DXHelper.cpp  DXHelperFunctions.cpp  HResultExceptionHandler.cpp  HrException.cpp
native/client/src/main/cpp/: MainDXWindow.cpp  Win32Application.cpp  main.cpp
native/client/src/main/headers/: DXWindow.h  MainDXWindow.h  Win32Application.h  main.h  stdafx.h
native/server/: CMakeLists.txt
src/main/resources/: application.properties
web/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
web/backend/: README.md  build.gradle.kts  micronaut-cli.yml
web/backend/src/main/kotlin/hu/matemagyar/wge/: Application.kt  Hybrid.kt  SceneSer.kt
web/backend/src/main/kotlin/hu/matemagyar/wge/bodyhandler/: CustomMessageBodyHandlerRegistry.kt  ProtoBufferBodyHandlerProxy.kt
web/backend/src/main/kotlin/hu/matemagyar/wge/controller/: SceneController.kt  UserController.kt
web/backend/src/main/kotlin/hu/matemagyar/wge/model/: User.kt
web/backend/src/main/kotlin/hu/matemagyar/wge/proto/: CustomBodyHandlerRegistry.kt  CustomMessageBodyHandlerRegistry.kt  ProtoBufferBodyHandler.kt  ProtoBufferBodyHandlerProxy.kt  ProtoBufferCodec.kt  ProtoBufferSerde.kt
web/backend/src/main/kotlin/hu/matemagyar/wge/repository/: UserRepository.kt
web/backend/src/main/resources/: application.yml
web/backend/src/main/resources/db/: 2024-03-03_00-12_user_001.xml
web/backend/src/test/kotlin/hu/matemagyar/wge/: ManualIntegrationTest.kt  WgeTest.kt
web/backend/src/test/kotlin/hu/matemagyar/wge/controller/: SceneController.kt  UserControllerTest.kt  UserEntityControllerTest.kt
web/backend/src/test/kotlin/hu/matemagyar/wge/reposirtory/: UserRepositoryTest.kt
web/backend/src/test/resources/: application-test.yml
web/docker/: .env  docker-compose.yml
web/docker/node-sandbox/: Docker.MD
web/frontend/: .gitignore  README.md  angular.json  build.gradle.kts  package-lock.json
web/frontend/sandbox/: Docker.MD  docker-compose.yml
web/frontend/src/: index.html
web/frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts
web/middleware/: build.gradle.kts
web/middleware/src/main/kotlin/hu/matemagyar/wge/model/: Hybrid.kt  User.kt
web/service/: build.gradle.kts
web/service/src/main/kotlin/hu/matemagyar/wge/entity/: UserEntity.kt
web/service/src/main/resources/: application.yml
web/service/src/main/resources/db/: 2024-03-03_00-12_user_001.xml  liquibase-changelog.xml
web/service/src/test/resources/: application-test.yml
(+18 files in other folders)
